---
source: crates/ruff_linter/src/linter.rs
---
PLE0118 Name `x` is used prior to global declaration on line 10
 --> resources/test/fixtures/syntax_errors/load_before_global_declaration.py:9:5
  |
9 |     x += 1      # error
  |     ^
  |

PLE0118 Name `x` is used prior to global declaration on line 14
  --> resources/test/fixtures/syntax_errors/load_before_global_declaration.py:13:11
   |
13 |     print(x)  # error
   |           ^
   |
